--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,14 @@
 name: CI
 
-on: [push]
+on: 
+
+  workflows_dispatch:
+
+  push:
+    branches:
+      - master
+
+  pull_request:
 
 jobs:
   build:
