--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - run: |
-      echo build
+      - name: Checkout
+      uses: actions/checkout@v3
