--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,14 @@
-name: CI
+name: learn-github-actions
 
-on: 
-
-  workflows_dispatch:
-
-  push:
-    branches:
-      - master
-
-  pull_request:
+on: [push]
 
 jobs:
-  build:
+  check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+      - run: npm install -g bats
+      - run bats-v
